2010-11-21 gabriel
* Clear the text_content field to use SVG Editor from EditorField

2010-11-09 gabriel
* Initial implementation to SVG Editor to be supported in EditorField

2010-11-08 gabriel
* The initial commit